<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daniel.requestservices.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout_dimen">
        <LinearLayout
            android:id="@+id/linear_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/method"
                android:textColor="@color/colorPrimaryStringBlack"/>
            <RadioGroup
                android:id="@+id/rg_method_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center|top"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/post" />
                <RadioButton
                    android:id="@+id/rb_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/get"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/linear_top"
            android:hint="@string/input_url"
            android:textColor="@color/colorPrimaryStringBlack"
            android:inputType="textUri"/>

        <Spinner
            android:id="@+id/sp_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_url"/>
        <TextView
            android:id="@+id/tv_title_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/sp_url"
            android:text="@string/request"
            android:textColor="@color/colorPrimaryStringBlack"
            android:textSize="16sp"/>
        <LinearLayout
            android:id="@+id/linear_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title_request"
            android:orientation="vertical">
            <EditText
                android:id="@+id/request_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name"/>
            <EditText
                android:id="@+id/request_last_name_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/ap_pat"/>
            <EditText
                android:id="@+id/request_last_name_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/ap_mat"/>
            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/request_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/birth"/>
                <EditText
                    android:id="@+id/request_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/sex"
                    android:inputType="textCapWords"
                    android:maxLength="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/request_city"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/city"/>
                <EditText
                    android:id="@+id/request_ind"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/ind"/>
            </LinearLayout>
            <EditText
                android:id="@+id/request_curp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/curp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_et"
            android:text="@string/send"
            android:inputType="textCapWords"
            android:textColor="@color/colorWhiteString"
            android:background="@drawable/rounded_raised_button"
            android:elevation="2dp"/>
    </RelativeLayout>
</ScrollView>
